@@ -1,0 +1,272 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "K-pop\u5927\u71b1\uff1aLe Sserafim\u3001NCT\u5728\u73b9\u3001StayC\u3001Seventeen\u7b49\u5f37\u52e2\u56de\u6b78\uff01", "description": "K-pop\u5927\u71b1\uff1aLe Sserafim\u3001NCT\u5728\u73b9\u3001StayC\u3001Seventeen\u7b49\u5f37\u52e2\u56de\u6b78\uff01", "url": "https://www.famechos.me/news/K-pop\u5927\u71b1\uff1aLe Sserafim\u3001NCT\u5728\u73b9\u3001StayC\u3001Seventeen\u7b49\u5f37\u52e2\u56de\u6b78\uff01.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-22T11:56:16.470505+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/K-pop大熱：Le Sserafim、NCT在玹、StayC、Seventeen等強勢回歸！.html"/>
+<meta name="description" content="K-pop強勢回歸！Le Sserafim、NCT在玹、StayC、Seventeen等人氣團體帶來最新作品，席捲樂壇！">
+<meta name="keywords" content="K-pop, Le Sserafim, NCT在玹, StayC, Seventeen, 韓流, K-pop大熱, 最新作品, 樂壇">
+
+<link rel="stylesheet" href="../main-nav.css">
+<link rel="stylesheet" href="../main-content.css">
+<link rel="stylesheet" href="../main-small.css">
+<link rel="stylesheet" href="../post.css">
+<link rel="stylesheet" href="../main-footer.css">
+<link rel="stylesheet" href="../news.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/K-pop大熱：Le Sserafim、NCT在玹、StayC、Seventeen等強勢回歸！.html" />
+        <meta property="og:title" content="K-pop大熱：Le Sserafim、NCT在玹、StayC、Seventeen等強勢回歸！" />
+        <meta property="og:description" content="K-pop大熱：Le Sserafim、NCT在玹、StayC、Seventeen等強勢回歸！" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="K-pop大熱：Le Sserafim、NCT在玹、StayC、Seventeen等強勢回歸！" />
+        <meta property="twitter:description" content="K-pop大熱：Le Sserafim、NCT在玹、StayC、Seventeen等強勢回歸！" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+<meta property="og:type" content="article" />
+<meta name="robots" content="index, follow" />
+<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <a href="https://www.famechos.me/"><img class="famechos-logo" src="../img/famechos_logo.png"></a>
+         
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button></a>
+ 
+        </div>
+        <div class="nav-type-2 nav-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button></a>
+ 
+        </div>
+        <div class="nav-type-3 nav-type"><a href="https://www.famechos.me/drama.html">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button></a>
+         
+        </div>
+        <div class="nav-type-4 nav-type"><a href="https://www.famechos.me/others.html">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button></a>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer"><a href="https://www.famechos.me/about_us.html">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button></a>
+        </div>
+        <div class="nav-setting"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button></a>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type"><a href="https://www.famechos.me/drama.html">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type"><a href="https://www.famechos.me/others.html">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type"><a href="https://www.famechos.me/about_us.html">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button></a>
+
+        </div>  
+
+      </div>
+     
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>K-pop大熱：Le Sserafim、NCT在玹、StayC、Seventeen等強勢回歸！</h1>
+</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">22/10/2024</p>
+        </div>
+<p>Le Sserafim將於12月11日在日本發行單曲《Crazy》，這是該團體在日本發行的第三張實體單曲。該單曲將包含三首歌曲：第四和第三張迷你專輯的主打歌《Crazy》和《Easy》的日語版本，以及一首新歌。</p>
+<p>《Crazy》曾登上告示牌熱門100榜單第88位，並升至第76位，是該團體的最高排名。同名EP曾登上告示牌200榜單第7位，並登上了專輯銷售榜榜首。它還於上個月獲得了日本レコード協会的金認證。</p>
+<h2>入伍前，NCT的在玹將發行個人單曲</h2>
+<p>NCT的在玹將在入伍前贈送歌迷一首歌曲。他將於10月24日發行數位單曲《Unconditional》，距離其首張個人專輯《J》發行僅約兩個月。</p>
+<p>在玹還將於10月26-27日在首爾舉辦其首場個人粉絲演唱會。第二天的活動將在全球直播。兩天的門票在發售後立即售罄。</p>
+在玹將於11月4日入伍，並以軍樂隊成員身份服役。<h2>StayC將回歸並發行數位單曲</h2>
+<p>韓國女團StayC將於10月30日回歸並發行數位單曲《…|》。該團體的經紀公司HighUp Entertainment於週五宣布了這一消息。</p>
+<p>該公司上傳了一個短視覺效果視頻，展示了一個類似黑莓的粉紅色手機正在等待回覆，手機鍵盤上只有三個字母——G、P和T——引起了粉絲的興趣。</p>
+<p>這支六人團體在發行首張錄音室專輯《Metamorphic》約三個月後回歸，該專輯曾登上Spotify的專輯榜榜首。</p>
+<p>StayC將於下個月在首爾開設一個快閃店，以慶祝其出道四周年。明年2月，StayC將發行新專輯，4月將啟動其第二次國際巡演。</p>
+<h2>Seventeen Unveils English Version of Latest Single</h2>
+<p>韓國男團Seventeen最近演唱了新單曲的英文版。該團體一直以其高能量的表演和多樣的音樂風格而受到粉絲的喜愛。</p>
+<p>該團體的新單曲英文版是其首次嘗試英文歌曲，展現了該團體的音樂多樣性和成員的語言能力。</p>
+<p>Seventeen的粉絲對該團體的新單曲英文版表示了高度期待和興趣，該團體的音樂一直以其獨特的風格和高品質而受到好評。</p>
+<h2>세븐틴, DJ카리와 함께하는 《Love, Money, Fame》 네 곡 리메이크 버전 공개</h2>
+<p>韓國男子組合세븐틴於週五推出四首重錄版《Love, Money, Fame (feat. DJ卡利)》，包括英文版。這些重錄版歌曲是基於其第12張迷你專輯《Spill The Feels》的主打歌進行重新編曲和加速。</p>
+<p>專輯於週一發行，首日銷量接近250萬張，並登上了18個地區的iTunes Top Albums Chart榜首，以及Oricon的每日專輯排名榜首。</p>
+<p>英文版的推出可能與樂團即將舉行的美國巡演有關，巡演將於下週在伊利諾伊州的罗斯蒙特奥尔斯泰特竞技场開始。隨後，樂團將在美國另外四個城市進行演出，然後啟動日本的巨蛋巡演。</p>
+<p>此外，成員Junghan於週末在京畿道高陽市舉行的兩天演唱會中出現，令粉絲們感到欣喜。他目前正在完成義務兵役。</p>
+
+<p>資料來源：Korea Herald</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/5iorUvPpjU8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+     
+      <div class ="related-news-box">
+        
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/《黑白大廚》引發預訂熱潮！冠軍餐廳預訂價格飆升至70萬韓元，參賽廚師餐廳被訂滿至11月.html">《黑白大廚》引發預訂熱潮！冠軍餐廳預訂價格飆升至70萬韓元，參賽廚師餐廳被訂滿至11月</a>
+        </p>
+                
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/韓國藝術界新時代！首次接受藝術品繳納繼承稅，豐富國內藝術界.html">韓國藝術界新時代！首次接受藝術品繳納繼承稅，豐富國內藝術界</a>
+        </p>
+                
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/巫術驚悚片《屍啟》震驚西班牙！拿下錫切斯國際奇幻電影節大獎，1200萬觀眾為何瘋狂.html">巫術驚悚片《屍啟》震驚西班牙！拿下錫切斯國際奇幻電影節大獎，1200萬觀眾為何瘋狂</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <a href="https://www.famechos.me/"><img class="famechos-logo-footer" src="../img/famechos_logo.png"></a>
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <a href="https://www.famechos.me/k-pop.html"><p class="footer-text">K-POP</p></a>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <a href="https://www.famechos.me/j-pop.html"><p class="footer-text">J-POP</p></a>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <a href="https://www.famechos.me/drama.html"><p class="footer-text">影視</p></a>
+        </div>
+        <div class="other-footer-box footer-box">
+          <a href="https://www.famechos.me/others.html"><p class="footer-text">其他</p></a>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+     
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
