@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Tue, 22 Oct 2024 11:53:03 +0800</lastBuildDate>
+  <lastBuildDate>Tue, 22 Oct 2024 11:56:32 +0800</lastBuildDate>
 
   <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
@@ -291,5 +291,11 @@ YG娛樂旗下的新人女團BABYMONSTER（韓語：베이비몬스터）將於1
   <description>BTS成員Jin將於下月發行個人專輯。韓國媒體報導，BTS成員Jin將於11月發行個人專輯。百赫音樂公司確認了這一消息，但沒有透露具體日期。...</description>
   <category>K-Pop</category>
   <pubDate>Tue, 22 Oct 2024 11:53:03 +0800</pubDate>
+</item><item>
+  <title>K-pop大熱：Le Sserafim、NCT在玹、StayC、Seventeen等強勢回歸！</title>
+  <link>https://www.famechos.me/news/K-pop大熱：Le Sserafim、NCT在玹、StayC、Seventeen等強勢回歸！.html</link>
+  <description>今日K-pop：Le Sserafim將於12月發行第三張日本單曲。...</description>
+  <category>K-Pop</category>
+  <pubDate>Tue, 22 Oct 2024 11:56:32 +0800</pubDate>
 </item></channel>
 </rss>
