@@ -290,4 +290,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/K-pop大熱：Le Sserafim、NCT在玹、StayC、Seventeen等強勢回歸！.html</ns0:loc>
+    <ns0:lastmod>2024-10-22T11:56:32+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
