@@ -42,3 +42,4 @@ https://www.koreaherald.com/view.php?ud=20241013050081
 https://koreatimes.co.kr/www/nation/2024/10/732_384043.html?utm_source=fl
 https://koreatimes.co.kr/www/nation/2024/10/689_384054.html?utm_source=fl
 https://koreatimes.co.kr/www/nation/2024/10/688_384039.html?utm_source=fl
+https://www.koreaherald.com/view.php?ud=20241014050669
